--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   </head>
   <body>
 
-
+    <div class="container">
+      <div class="row">
+        <div class="col">Column</div>
+        <div class="col">Column</div>
+        <div class="w-100"></div>
+        <div class="col">Column</div>
+        <div class="col">Column</div>
+      </div>
+    </div>
 
   </body>
 </html>
