--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
 
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group mr-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-secondary">1</button>
+        <button type="button" class="btn btn-secondary">2</button>
+        <button type="button" class="btn btn-secondary">3</button>
+        <button type="button" class="btn btn-secondary">4</button>
+      </div>
+      </div>
+
+
     <div class="container">
       <div class="row">
         <div class="col">Column</div>
