--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"">
-    <title> Bootstrap Exercise </title>
+    <title> THE COFFEE REVIEW </title>
   </head>
   <body>
 
@@ -13,26 +13,17 @@
     <button type="button" class="btn btn-outline-danger">Danger</button>
     <button type="button" class="btn btn-outline-warning">Warning</button>
 
-    <div class="container">
-      <div class="row">
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-        <div class="w-100"></div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-      </div>
-    </div>
 
 
     <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="http://www.visitgloucester.co.uk/imageresizer/?image=%2Fdmsimgs%2Fcafe%20nero(3).jpg&action=ProductDetail" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
 </div>
 
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="https://i.dailymail.co.uk/i/pix/2018/01/18/15/484549C700000578-5284455-image-a-55_1516288089678.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
