--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   </head>
   <body>
 
-    <button type="button" class="btn btn-outline-primary">Primary</button>
-    <button type="button" class="btn btn-outline-secondary">Secondary</button>
-    <button type="button" class="btn btn-outline-success">Success</button>
-    <button type="button" class="btn btn-outline-danger">Danger</button>
-    <button type="button" class="btn btn-outline-warning">Warning</button>
+<h1> THE COFFEE REVIEW </h1>
+    <button type="button" class="btn btn-outline-primary">Cafe Nero </button>
+    <button type="button" class="btn btn-outline-success">Starbucks</button>
+    <button type="button" class="btn btn-outline-warning">Pret a Manger</button>
 
 
 
