--- a/indexwebsite.html
+++ b/indexwebsite.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Website</title>
+      <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+      <link rel="stylesheet" href="../styles.css">
+  </head>
+  <body>
+    <button type="button" class="btn btn-outline-first segment">first segment</button>
+    <button type="button" class="btn btn-outline-second">second</button>
+    <button type="button" class="btn btn-outline-third">third</button>
+    <button type="button" class="btn btn-outline-fourth">fourth</button>
+    <button type="button" class="btn btn-outline-five">five</button>
+    <button type="button" class="btn btn-outline-six">six</button>
+    <button type="button" class="btn btn-outline-seven">seven</button>
+    <button type="button" class="btn btn-outline-eight">eightt</button>
+  </body>
+</html>
