--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-<h1> THE COFFEE REVIEW </h1>
+<h1> Personal Website </h1>
     <button type="button" class="btn btn-outline-primary">Home Page </button>
     <button type="button" class="btn btn-outline-success">Survey </button>
     <button type="button" class="btn btn-outline-warning">Contact Us </button>
